Fixed horizontal scrolling at 320px yet again..
I used Travis' trick by deleting HTML elements with Chrome devTools to narrow down to traffic, daily traffic, and mobile users sections. Then I looked at margin and padding to identify that recent increase in padding caused the scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ h2 {
 
 section {
     border-bottom: solid rgba(0, 0, 0, 0.193) .5px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .social-stats-container {
@@ -268,7 +268,7 @@ section {
     border-radius: 5px;
     padding: 10px;
     width: 100%;
-    margin: 10px 0px;
+    margin: 10px 0;
     color: grey;
 }
 
@@ -297,10 +297,6 @@ form {
     font-size: .9rem;
     display: flex;
     justify-content: flex-start;
-}
-
-.toggles {
-    width: 100%;
 }
 
 .button-primary {
